@@ -158,6 +158,10 @@ Overview of changes from 0.6.1 to 0.7.0
 
   - Fix writable static data feature dependency
 
+  - Fix crashes on 'make check' in test-c2/ on x86_64-unknown-linux-gnu
+
+  - Fix unwanted test-c2/*-coll.c removal on --disable-maintainer-mode
+
 
 Overview of changes from 0.5.0 (r3097 + private modifications) to 0.6.1
 ==
